Use condition() instead of creating PreconditionViolationException